--- a/src/components/CommentCard/CommentCard.module.scss
+++ b/src/components/CommentCard/CommentCard.module.scss
@@ -65,8 +65,24 @@
 	border-radius: 20px;
 	padding: 20px;
 	transition: background-color 0.2s ease-in-out;
+	@media only screen and (max-width: 1440px) {
+		width: 400px;
+		height: 160px;
+	}
 	@media only screen and (max-width: 1050px) {
-		height: 180px;
+		width: 300px;
+	}
+	@media only screen and (max-width: 800px) {
+		width: 550px;
+		margin-inline: auto;
+	}
+	@media only screen and (max-width: 600px) {
+		width: 400px;
+	}
+	@media only screen and (max-width: 450px) {
+		width: 280px;
+		height: 140px;
+		padding: 12px;
 	}
 	&:hover {
 		background-color: $secondary-color;
@@ -85,8 +101,11 @@
 			font-size: 20px;
 			font-weight: 500;
 			color: $accent-color;
-			@media only screen and (max-width: 450px) {
+			@media only screen and (max-width: 1050px) {
 				font-size: 18px;
+			}
+			@media only screen and (max-width: 450px) {
+				font-size: 14px;
 			}
 		}
 	}
@@ -103,6 +122,9 @@
 		font-weight: 600;
 		@media only screen and (max-width: 450px) {
 			font-size: 14px;
+		}
+		@media only screen and (max-width: 450px) {
+			font-size: 12px;
 		}
 	}
 }
