--- a/src/components/ProductDetail/ProductDetail.module.scss
+++ b/src/components/ProductDetail/ProductDetail.module.scss
@@ -374,15 +374,29 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+			@media only screen and (max-width: 600px) {
+				padding: 10px;
+				gap: 20px;
+			}
+			@media only screen and (max-width: 450px) {
+				flex-direction: column;
+			}
 			.allReviews {
 				font-size: 24px;
 				display: flex;
 				align-items: center;
 				gap: 10px;
+				@media only screen and (max-width: 600px) {
+					font-size: 18px;
+					gap: 8px;
+				}
 				.counter {
 					font-size: 16px;
 					font-weight: 400;
 					color: $gray;
+					@media only screen and (max-width: 600px) {
+						font-size: 12px;
+					}
 				}
 			}
 			.sortAndWriteContainer {
@@ -399,11 +413,16 @@
 						cursor: pointer;
 						outline: none;
 						appearance: none;
+						color: $accent-color;
 						width: 160px;
 						display: flex;
 						align-items: center;
 						padding-left: 20px;
 						height: 52px;
+						@media only screen and (max-width: 1050px) {
+							font-size: 14px;
+							width: 140px;
+						}
 					}
 					.downArrow {
 						z-index: 2;
@@ -413,7 +432,7 @@
 					}
 				}
 				.writeReviewBtn {
-					width: 200px;
+					width: 180px;
 					height: 52px;
 					background-color: $accent-color;
 					color: $primary-color;
@@ -426,6 +445,9 @@
 					transition: all 0.1s ease-in-out;
 					@media only screen and (max-width: 1050px) {
 						font-size: 14px;
+					}
+					@media only screen and (max-width: 600px) {
+						width: 120px;
 					}
 					&:hover {
 						border: 1px solid $accent-color;
@@ -440,6 +462,11 @@
 			grid-template-columns: auto auto;
 			gap: 20px;
 			margin-inline: auto;
+			@media only screen and (max-width: 800px) {
+				display: flex;
+				flex-direction: column;
+			}
+			margin-block: 20px;
 		}
 	}
 }
