--- a/src/components/CartModal/CartModal.module.scss
+++ b/src/components/CartModal/CartModal.module.scss
@@ -12,37 +12,118 @@
 	justify-content: center;
 	z-index: 4444;
 }
-
+.modalContent * {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 .modalContent {
-	background: #fff;
+	background: $secondary-color;
 	padding: 20px;
 	border-radius: 8px;
-	max-width: 500px;
+	max-width: 800px;
 	width: 100%;
-    font-family: $secondary-font;
+
+	font-family: $secondary-font;
 }
 
 .cartModal {
+	::-webkit-scrollbar {
+		width: 10px;
+	}
+	::-webkit-scrollbar-track {
+		background: $hero-bg;
+	}
+	::-webkit-scrollbar-thumb {
+		background: $accent-color;
+	}
+	::-webkit-scrollbar-thumb:hover {
+		background: $gray;
+		cursor: ns-resize;
+	}
 	h2 {
 		margin-bottom: 1rem;
 	}
 	ul {
 		list-style: none;
 		padding: 0;
+		max-height: 70vh;
+		overflow-y: auto;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
 	}
 	.cartItem {
 		display: flex;
 		justify-content: space-between;
-		margin-bottom: 1rem;
+		background-color: $primary-color;
+		border-radius: 10px;
+		align-items: center;
+		.cartItemDetails {
+			display: flex;
+			align-items: center;
+			gap: 20px;
+			.textInfo {
+				display: flex;
+				flex-direction: column;
+				width: 40ch;
+			}
+		}
 	}
-	.cartSummary {
-		margin-top: 1rem;
-		font-weight: bold;
+	.selectQuantityContainer {
+		display: flex;
+		align-items: center;
+		gap: 30px;
+		.operationBtn {
+			background-color: transparent;
+			border: none;
+			align-items: center;
+			justify-content: center;
+			height: 30px;
+			max-width: 30px;
+			width: 100%;
+			display: flex;
+			cursor: pointer;
+			border-radius: 20px;
+			transition: all 0.1s ease-in-out;
+			&:hover {
+				background-color: $gray;
+				@media only screen and (max-width: 600px) {
+					background-color: inherit;
+				}
+			}
+		}
+		.quantityDisplay {
+			width: 50px;
+			text-align: center;
+			font-size: 18px;
+		}
+		.addButton {
+			width: 400px;
+			height: 52px;
+			background-color: $accent-color;
+			color: $primary-color;
+			border: none;
+			outline: none;
+			font-family: $secondary-font;
+			cursor: pointer;
+			font-size: 16px;
+			border-radius: 50px;
+			transition: all 0.1s ease-in-out;
+			@media only screen and (max-width: 1050px) {
+				font-size: 14px;
+			}
+			&:hover {
+				border: 1px solid $accent-color;
+				background-color: $primary-color;
+				color: $accent-color;
+			}
+		}
 	}
+
 	.actions {
 		display: flex;
 		justify-content: space-between;
-		margin-top: 1rem;
 		button {
 			padding: 0.5rem 1rem;
 			border: none;
