--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -10,13 +10,48 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 50px;
+	gap: 40px;
+	margin-top: 40px;
+	@media screen and (max-width: 1440px) {
+		gap: 20px;
+		margin-block: 30px -70px;
+	}
+	@media screen and (max-width: 1050px) {
+		margin-bottom: -30px;
+	}
+	@media screen and (max-width: 850px) {
+		flex-direction: column;
+	}
+	@media screen and (max-width: 600px) {
+		gap: 10px;
+		margin-bottom: 0;
+	}
 	.imgWrapper {
 		width: 650px;
 		height: 650px;
 		position: relative;
 		img {
 			border-radius: 20px;
+		}
+		@media screen and (max-width: 1440px) {
+			width: 450px;
+			height: 450px;
+		}
+		@media screen and (max-width: 1050px) {
+			width: 400px;
+			height: 400px;
+		}
+		@media screen and (max-width: 850px) {
+			width: 500px;
+			height: 300px;
+			img {
+				border-radius: 10px;
+				object-fit: cover;
+			}
+		}
+		@media screen and (max-width: 600px) {
+			width: 300px;
+			height: 200px;
 		}
 	}
 	.form {
@@ -25,16 +60,36 @@
 		align-items: center;
 		max-width: 90ch;
 		gap: 40px;
+		@media screen and (max-width: 1440px) {
+			gap: 20px;
+		}
 		.title {
 			font-family: $primary-font;
 			font-size: 64px;
 			line-height: 64px;
 			text-align: center;
+			@media screen and (max-width: 1440px) {
+				font-size: 50px;
+				width: 550px;
+			}
+			@media screen and (max-width: 1050px) {
+				font-size: 36px;
+				line-height: 46px;
+				width: 400px;
+			}
+			@media screen and (max-width: 600px) {
+				font-size: 24px;
+				line-height: 46px;
+				width: 300px;
+			}
 		}
 		.inputWrapper {
 			display: flex;
 			flex-direction: column;
 			gap: 30px;
+			@media screen and (max-width: 1440px) {
+				gap: 20px;
+			}
 			.inputLabel {
 				display: flex;
 				flex-direction: column;
@@ -55,6 +110,21 @@
 					&:focus {
 						box-shadow: 0 0 10px 1px $secondary-color;
 					}
+					@media screen and (max-width: 1440px) {
+						width: 400px;
+					}
+					@media screen and (max-width: 1050px) {
+						width: 300px;
+						height: 36px;
+						font-size: 14px;
+						text-indent: 50px;
+					}
+					@media screen and (max-width: 850px) {
+						width: 400px;
+					}
+					@media screen and (max-width: 600px) {
+						width: 300px;
+					}
 				}
 				.inputIcons {
 					position: absolute;
@@ -62,6 +132,10 @@
 					top: 8px;
 					width: 32px;
 					height: 32px;
+					@media screen and (max-width: 1050px) {
+						width: 24px;
+						height: 24px;
+					}
 				}
 				.error {
 					position: absolute;
@@ -69,6 +143,10 @@
 					bottom: -22px;
 					color: $red;
 					font-size: 16px;
+					@media screen and (max-width: 1440px) {
+						font-size: 14px;
+						bottom: -18px;
+					}
 				}
 			}
 		}
@@ -89,6 +167,20 @@
 				color: $accent-color;
 				cursor: pointer;
 				border: 1px solid $accent-color;
+			}
+			@media screen and (max-width: 1440px) {
+				width: 400px;
+			}
+			@media screen and (max-width: 1050px) {
+				width: 300px;
+				height: 36px;
+				font-size: 14px;
+			}
+			@media screen and (max-width: 850px) {
+				width: 400px;
+			}
+			@media screen and (max-width: 600px) {
+				width: 300px;
 			}
 		}
 
@@ -118,6 +210,20 @@
 				color: $primary-color;
 				cursor: pointer;
 				border: 1px solid $accent-color;
+			}
+			@media screen and (max-width: 1440px) {
+				width: 400px;
+			}
+			@media screen and (max-width: 1050px) {
+				width: 300px;
+				height: 36px;
+				font-size: 14px;
+			}
+			@media screen and (max-width: 850px) {
+				width: 400px;
+			}
+			@media screen and (max-width: 850px) {
+				width: 300px;
 			}
 		}
 	}
