--- a/src/components/CartModal/CartModal.module.scss
+++ b/src/components/CartModal/CartModal.module.scss
@@ -1,5 +1,4 @@
 @use "../../app/variables" as *;
-
 .modalOverlay {
 	background: rgba(0, 0, 0, 0.5);
 	position: fixed;
@@ -25,6 +24,15 @@
 	width: 100%;
 	outline: none;
 	font-family: $secondary-font;
+	@media screen and (max-width: 1050px) {
+		max-width: 600px;
+	}
+	@media screen and (max-width: 800px) {
+		max-width: 400px;
+	}
+	@media screen and (max-width: 500px) {
+		max-width: 250px;
+	}
 }
 
 .cartModal {
@@ -50,6 +58,9 @@
 		font-family: $primary-font;
 		text-align: center;
 		font-size: 30px;
+		@media screen and (max-width: 800px) {
+			font-size: 20px;
+		}
 	}
 	.closeBtn {
 		position: absolute;
@@ -68,11 +79,18 @@
 		&:hover {
 			transform: rotate(45deg);
 		}
+		@media screen and (max-width: 800px) {
+			width: 24px;
+			height: 24px;
+		}
 	}
 	.emptyWarning {
 		font-size: 40px;
 		text-align: center;
 		margin-block: 20px;
+		@media screen and (max-width: 800px) {
+			font-size: 20px;
+		}
 	}
 	ul {
 		list-style: none;
@@ -82,13 +100,31 @@
 		display: flex;
 		flex-direction: column;
 		gap: 20px;
+		@media screen and (max-width: 500px) {
+			max-height: 340px;
+		}
 	}
 	.cartSummary {
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
+		@media screen and (max-width: 500px) {
+			flex-direction: column;
+			gap: 10px;
+		}
+		.totalPrice {
+			width: 20ch;
+			@media screen and (max-width: 800px) {
+				width: 18ch;
+				font-size: 14px;
+			}
+			@media screen and (max-width: 500px) {
+				width: 16ch;
+				font-size: 16px;
+			}
+		}
 		.clearBtn {
-			width: 200px;
+			width: 120px;
 			height: 40px;
 			display: flex;
 			justify-content: center;
@@ -105,6 +141,15 @@
 			&:hover {
 				background-color: $primary-color;
 				color: $accent-color;
+			}
+			@media screen and (max-width: 800px) {
+				width: 100px;
+				height: 30px;
+				font-size: 14px;
+			}
+			@media screen and (max-width: 500px) {
+				width: 200px;
+				font-size: 12px;
 			}
 		}
 	}
